test/parallel/coforall/bradc/nested/nestedForall2.good
nestedForall2.chpl:6: error: cannot use a coforall within a standard iterator
