test/parallel/coforall/bradc/nested/nestedForall2.future
bug: coforall in iterator

This currently seg faults.  Should probably generate an error message.
